# manage

./: .gitignore  .pre-commit-config.yaml  README.md  README.org  manage.toml  manage.yaml  pyproject.toml
docs/: method_details.md
examples/: manage.toml
manage/: __init__.py  __main__.py  cli.py  dispatch.py  manage.py  models.py  oldmanage  sample_manage.yaml  setup.py  utilities.py  validate.py
manage/commands/: build.py  clean.py  git_commit_version_files.py  git_create_release.py  git_create_tag.py  git_push_to_github.py  poetry_bump_version_patch.py  publish_to_pypi.py  run_pre_commit.py  update_readme.py
manage/examples/: manage.toml  manage.yaml
manage/methods/: __init__.py  _check.py  _print.py  build.py  check.py  clean.py  command.py  git_add.py  git_commit.py  git_commit_version_files.py  git_create_release.py  git_create_tag.py  git_push_to_github.py  pandoc_convert_org_to_markdown.py  poetry_build.py  poetry_bump_version.py  poetry_lock_check.py  poetry_publish.py  poetry_version.py  poetry_version_sync.py  pre_commit.py  print.py  publish_to_pypi.py  run_command.py  run_pre_commit.py  sass.py  update_readme.py
manage/models/: __init__.py  configuration.py  pyproject.py  recipe.py  recipes.py  step.py
manage/steps/: __init__.py  build.py  check.py  clean.py  git_commit_version_files.py  git_create_release.py  git_create_tag.py  git_push_to_github.py  pandoc_convert_org_to_markdown.py  poetry_bump_version.py  poetry_bump_version_patch.py  poetry_lock_refresh.py  publish_to_pypi.py  run_pre_commit.py  show.py  update_readme.py
tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_models.py  test_models.toml  test_models.yaml  test_models_pyproject.py  test_models_pyproject_no_version.toml  test_read_parse_recipe_file.py  test_setup.py  test_utilities.py
tests/methods/: test_build.py  test_clean.py  test_git_add.py  test_git_commit.py  test_pandoc_convert_org_to_markdown.py  test_poetry_version_sync.py  test_update_readme.py
tests/models/: test_models.toml  test_pyproject.py  test_pyproject_no_package.toml  test_recipe_s.py  test_step.py
tests/steps/: test_clean.py  test_models.py  test_pandoc_convert_org_to_markdown.py  test_update_readme.py
